Fix #3904, #3884: fix website horizontal overflow

--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -33628,6 +33628,7 @@ has-background-moon.is-hoverable:active {
   display: flex;
   flex-direction: column;
   gap: var(--p);
+  overflow: hidden;
 }
 
 .bd-docs-button {
