--- a/docs/_sass/docs/docs.scss
+++ b/docs/_sass/docs/docs.scss
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--p);
+  overflow: hidden;
 }
 
 .bd-docs-button {
